k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: auth
